--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "John ahn",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -26,7 +27,8 @@
     "mongoose": "^5.4.20",
     "multer": "^1.4.2",
     "react-redux": "^5.0.7",
-    "saslprep": "^1.0.3"
+    "saslprep": "^1.0.3",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
